[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.7"
vcell = "0.1.3"
cortex-m-rt = "0.6.15"
tm4c123x-hal = "0.10.2"
tm4c123x = "0.9.0"
panic-probe = {version = "0.3.0", features = ["print-defmt"]}
